change: begin rework general style of site

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,20 @@
+@font-face {
+    font-family: "Quicksand";
+    src: url(/fonts/Quicksand-Medium.ttf);
+}
+@font-face {
+    font-family: "Quicksand-bold";
+    src: url(/fonts/Quicksand-Bold.ttf);
+}
+:root {
+    --bg-color-cream: #ebd5bd;
+    --bg-color-black: #292929;
+    --bg-color-grey: #3f3f3f;
+    --bg-color-lightgrey: #505050;
+    --color-blue: #00aee7;
+}
 *, *::before, *::after {
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: "Quicksand";
     font-weight: 400;
     box-sizing: border-box;
     padding: 0;
@@ -11,20 +26,20 @@ body {
     overflow-x: hidden;
     height: 100vh;
     min-width: fit-content;
-    background-color: #3a3a3a;
+    background-color: var(--bg-color-cream);
 }
 header {
     display: flex;
     flex-direction: column;
     width: 100vw;
     height: fit-content;
-    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
 }
 #top-container {
     display: flex;
     height: 120px;
     color: #ffffff;   
-    background-color: #141414;
+    background-color: var(--bg-color-black);
 }
 #top-logo-content {
     align-self: center;
@@ -60,7 +75,7 @@ header {
     text-align: start;
     white-space: nowrap;
     font-size: 60px;
-    font-weight: 900;
+    font-weight: bolder;
     padding: 0 30px 0 50px;
 }
 #header-log-cart {
@@ -79,7 +94,7 @@ header {
 .log-btn {
     width: 70px;
     margin: 10px 5px;
-    padding: 5px;
+    padding: 6px;
     text-align: center;
     text-decoration: none;
     font-size: 1rem;
@@ -87,11 +102,11 @@ header {
     border-radius: 5px;
     transition: 0.3s ease-in;
     color: #ffffff;
-    background-color: #414141;
+    background-color: var(--bg-color-grey);
 }
 .log-btn:hover {
-    color: #00aee7;
-    border: 1px solid #00aee7;
+    color: c;
+    border: 1px solid var(--color-blue);
     cursor:pointer;
 }
 #connected {
@@ -99,7 +114,7 @@ header {
     height: 40px;
     margin: 10px 10px;
     border-radius: 50%;
-    border: 1px solid #00aee7;
+    border: 1px solid var(--color-blue);
 }
 #connected-img {
     width: 100%;
@@ -124,7 +139,7 @@ header {
     text-align: center;
     visibility: hidden;
     opacity:0;
-    transition: visibility 0.3s linear, opacity 0.2s linear;
+    transition: visibility 0.2s linear, opacity 0.2s linear;
 }
 #header-cart {
     flex:5%;
@@ -142,21 +157,21 @@ header {
     width: 100%;
     height: 80%;
     border-radius: 5px;
-    padding: 10px;
+    padding: 0 10px;
     text-align: center;
     align-self: center;
     transition: 0.3s ease-in;
     border: 2px solid transparent;
 }
 #cart-img-div:hover {
-    background-color: #414141;
-    border: 2px solid #00aee7;
+    background-color: var(--bg-color-grey);
+    border: 2px solid var(--color-blue);
     cursor: pointer;
 }
 #cart-img {
     width: 50px;
     height: 50px;
-    margin: auto;
+    margin: auto 3px auto auto;
 }
 #cart-content {
     width: 325px;
@@ -227,7 +242,8 @@ header {
     min-width: fit-content;
     height: 50px;
     font-size: 1.3rem;
-    background-color: #292929;
+    background-color: var(--bg-color-grey);
+    box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3);
 }
 #head-nav {
     width: 60%;
@@ -249,27 +265,22 @@ header {
     flex: auto;
     height: 100%;
     transition: 0.2s;
-    border-bottom: 1px solid #00aee7;
+    border-bottom: 1px solid var(--color-blue);
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .li-elem>a {
     text-align: center;
-    padding: 15px 30px;
+    padding: 13px 40px;
     text-decoration: none;
     font-weight: 400;
     color: rgb(255, 255, 255);
 }
 .li-elem:hover {
-    background-color: #474747;
+    background-color: var(--bg-color-lightgrey);
     cursor: pointer;
-    border-bottom: 5px solid #00aee7;
-}
-.li-line {
-    width: 2px;
-    height: 100%;
-    background-color: #ffffff;
+    border-bottom: 5px solid var(--color-blue);
 }
 main {
     display: flex;
@@ -277,7 +288,7 @@ main {
     min-width: 100vw;
 }
 main aside {
-    background-color: #292929;
+    background-color: var(--bg-color-grey);
 }
 #side-nav {
     display: flex;
@@ -287,17 +298,15 @@ main aside {
     min-width: 35px;
     top: 10px;
     height: 100vh;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    background-color: #292929;
-    transition: width 400ms ease-in-out;
+    overflow: hidden;
+    background-color: var(--bg-color-grey);
+    transition: width 0.4s ease-in-out;
 }
 #side-nav.active {
     width: 210px;
 }
 #side-nav-menu-img {
-    margin-left: 20px;
-    margin-bottom: 20px;
+    margin: 10px 0 20px 20px;
 }
 #side-nav a, .dropdown-btn, .dropdown-container>a {
     display: flex;
@@ -306,7 +315,7 @@ main aside {
     text-align: left;
     font-size: 1.3rem;
     font-weight: 400;
-    color: #c9c9c9;
+    color: #ffffff;
     padding: 15px 20px;
     border: none;
     background: none;
@@ -318,32 +327,32 @@ main aside {
     min-width: max-content;
 }
 #side-nav>a:hover, .dropdown-btn:hover, .dropdown-container>a:hover {
-    background-color: #3f3f3f;
+    background-color: var(--bg-color-lightgrey);
     cursor: pointer;
-    border-left: 4px solid #00aee7; 
+    border-left: 4px solid var(--color-blue); 
     color: #ffffff;
 }
 #side-nav-log-out {
     margin-left: 5px;
 }
-.active {
-    background-color: #3d3d3d;
-    font-weight: 600;
-}
 .dropdown-container {
     display: none;
     flex-direction: column;
-    background-color: #3d3d3d;
+    background-color: var(--bg-color-lightgrey);
     color: #181818;
     padding-left: 15px;
 }
 .dropdown-container.active {
     display: flex;
+    background-color: var(--bg-color-lightgrey);
 }
 .dropdown-container a {
     font-size: 1rem;
     min-width: max-content;
     margin-left: 35px;
+}
+.dropdown-container>a:hover {
+    background-color: var(--bg-color-lightgrey);
 }
 #page-content {
     width: 96vw;
@@ -358,9 +367,9 @@ main aside {
 .black-bg-div {
     width: 100%;
     height: 83vh;
-    color: #ffffff;
-    background-color: #141414;
-    border-bottom: solid 3px #242424;
+    color: #141414;
+    background-color: var(--bg-color-cream);
+    border-bottom: solid 2px #adb1b5
 }
 .main-container {
     width: 100%;
@@ -373,45 +382,39 @@ main aside {
     text-align: center;
 }
 .main-title {
-    padding-bottom: 60px;
+    padding: 0 50px 50px 50px;
     font-weight: 300;
     font-size: 600%;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    filter: drop-shadow(0px 0px 5px rgba(0, 174, 231, 0.5));
 }
 #div-btn-journey {
     text-align: center;
     font-size: 120%;
     font-weight: 400;
     padding: 20px 0;
-    border: solid 2px #ffffff;
+    border: solid 2px #000000;
     background-color: rgba(255, 255, 255, 0.05);
     transition: 0.3s ease;
 }
 #div-btn-journey>a{
     padding: 20px 40px;
-    color: #ffffff;
+    color: #000000;
     text-decoration: none;
 }
 #div-btn-journey:hover {
     cursor: pointer;
     transform: scale(1.05);
-    border-color:#00aee7;
-    filter: drop-shadow(0px 0px 5px rgba(255, 255, 255, 0.3));
 }
 .main-content-subtitle {
-    color: #818181;
+    color: #726f6f;
 }
 .main-content-text {
     width: 60%;
     word-wrap: normal;
     font-size: 150%;
     font-weight: 500;
-    margin: 40px auto;
-    color: #ffffff;
+    margin: 50px auto;
     text-align: center;
 }
-
 footer {
     bottom: 0;
     left: 0;
@@ -423,7 +426,7 @@ footer {
     width: 100vw;
     min-width: fit-content;
     padding: 40px 230px;
-    background-color: #141414;
+    background-color: var(--bg-color-black);
     color: #aaaaaa;
     cursor: pointer;
     box-shadow: 0px -5px 15px rgba(0, 0, 0, 0.25);
@@ -446,12 +449,13 @@ footer {
 }
 .footer-list-item a {
     font-weight: 600;
-    color: #adadad;
+    color: #ebd5bd;
     text-decoration:none;
     transition: 0.3s ease-in;
 }
 .footer-list-item a:hover {
-    color: #ffffff;
+    color: var(--color-blue);
+    transform: scale(1.02);
 }
 #footer-logo-img {
     min-width: 125px;
@@ -470,8 +474,8 @@ footer {
     filter: drop-shadow(1px 1px 14px rgba(255, 255, 255, 0.6));
 }
 #copyright {
-    font-size: 130%;
-    font-weight: 600;
+    font-size: 140%;
+    font-weight: 700;
     text-align: center;
     color: #ffffff;
 }
