--- a/css/styles_log.css
+++ b/css/styles_log.css
@@ -1,21 +1,22 @@
 .container {
     display: flex;   
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
     min-width: min-content;
-    height: 80vh;
+    height: 120vh;
     justify-content: center;
     align-items: center;
-    padding: 0 200px;
+    padding: 50px 200px 200px 200px;
     color: #ffffff;
 }
 #top-title {
+    color: var(--bg-color-black);
     margin: 30px auto;
 }
 .auth-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     min-width: 400px;
     max-width: 400px;
@@ -42,7 +43,7 @@ label {
     margin-bottom: 10px;
 }
 input {
-    height: 1.5rem;
+    height: 25px;
     border: none;
     border-radius: 5px;
     box-shadow: 0px 0px 5px rgba(255, 255, 255, 0.4);
@@ -66,7 +67,7 @@ input:focus {
 #sign-up-container {
     margin-top: 10px;
     border: none;
-    border-radius: 5px;
+    border-radius: 10px;
     width: 100%;
     background-color: #323232;
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
