--- a/css/styles_about.css
+++ b/css/styles_about.css
@@ -2,7 +2,7 @@
     width: 50%;
     min-width: 320px;
     margin: 40px auto;
-    background-color: #292929;
+    background-color: var(--bg-color-black);
     padding: 20px 40px;
     border-radius: 10px;
 }
@@ -13,7 +13,7 @@
     text-align: center;
 }
 .Lign {
-    background-color: #505050; 
+    background-color: var(--bg-color-lightgrey); 
     height: 3px; 
     border: 3px;
     border-radius: 10px;
