--- a/css/styles_cart.css
+++ b/css/styles_cart.css
@@ -1,30 +1,37 @@
-* {
-    color: white;
-}
 #order-content {
-    margin: 3% 0;
     width: 100vw;
+    padding:3%;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
+    background-color: #EBD5BD;
 }
 table {
-    width: 50%;
+    width: 70%;
     margin: 2% 2% 3%;
-    border: solid 1px rgba(220, 220, 220, 0.5);
 }
 td, th {
     padding: 20px;
     text-align: center;
     font-size: 1.4em;
-    border: solid 1px rgba(220, 220, 220, 0.5);
+}
+table{
+    border-spacing: 0;
+}
+td {
+    border-collapse: collapse;
+    border-top: 2px solid black;
+}
+#title-panier{
+    font-weight: 800;
+    font-size: xx-large;
 }
 td > img{
     border-radius: 20px;
 }
 .quantity-div {
-    margin: 65px 0;
+    margin: 20px 0;
 }
 .quantity-btn {
     margin-top: 10px;
@@ -53,17 +60,19 @@ td > img{
     padding: 5px;
     border: none;
     border-radius: 4px;
+    background-color: rgb(196, 0, 0);
 }
 .remove-item:hover {
-    background-color:#ff2600;
-    color: #ffffff;
+    box-shadow: inset 0px 3px 2px rgba(0, 0, 0, 0.233);
+    background-color:rgb(180, 0, 0);
 }
 #remove-order {
     width: 45%;
-    color: black;
+    color: white;
     padding: 5px;
     border: none;
     border-radius: 4px;
+    background-color: #ff2600;
 }
 #remove-order:hover {
     background-color:#ff2600;
