--- a/css/styles_categories.css
+++ b/css/styles_categories.css
@@ -1,20 +1,23 @@
 .content-title {
+    min-width: 555px;
     margin: 40px auto 40px 60px;
     padding: 20px;
-    color: #ffffff;
+    color: var(--bg-color-black);
 }
 .content-title h1 {
+    width: 100%;
     text-align: center;
     font-size: 3rem;
     font-weight: 700;
-    /* text-decoration: underline #00aee7; */
 }
 .content-title>p {
+    width: 100%;
     text-align: center;
     font-style: italic;
     font-weight: 300;
     font-size: 120%;
-    padding: 40px 100px 5px 0;
+    padding: 40px;
+    color: var(--bg-color-black);
 }
 #gems {
     display: flex;
@@ -23,7 +26,6 @@
     height: min-content;
     align-content: space-around;
     justify-content: space-around;
-    margin: auto 70px;
     padding: 0 20px 0 30px;
 }
 .gem {
@@ -61,9 +63,9 @@
     cursor: pointer;
     transition: 0.3s ease-in;
     transform: scale(1.01);
-    filter: drop-shadow(0px 0px 10px #00ade788);
+    filter: drop-shadow(0px 0px 15px #ffffff);
 }
-#geode-img {
+/* #geode-img {
     background-image: url("/img/indeximg1.jpg");
 }
 #rough-gems-img {
@@ -110,4 +112,4 @@
     background-color: rgba(255, 255, 255, 0.6);
     cursor: pointer;
     transform: scale(1.05);
-}
+} */
