--- a/css/styles_log.css
+++ b/css/styles_log.css
@@ -3,14 +3,14 @@
     flex-direction: column;
     width: 100%;
     min-width: min-content;
-    height: 120vh;
     justify-content: center;
     align-items: center;
+    height: 120vh;
     padding: 50px 200px 200px 200px;
-    color: #ffffff;
+    color: var(--color-white);
 }
 #top-title {
-    color: var(--bg-color-black);
+    color: var(--color-black);
     margin: 30px auto;
 }
 .auth-container {
@@ -56,7 +56,7 @@ input:focus {
     box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.4);;
 }
 .sign-button {
-    color: #ffffff;
+    color: var(--color-white);
     background-color: #179c31;
 }
 .sign-button:hover {
@@ -69,7 +69,7 @@ input:focus {
     border: none;
     border-radius: 10px;
     width: 100%;
-    background-color: #323232;
+    background-color: var(--color-black);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.7);
     text-align: center;
     padding-bottom: 20px;
