--- a/css/styles_contact.css
+++ b/css/styles_contact.css
@@ -8,19 +8,18 @@
     align-items: center;
 }
 #contact-title {
-    margin: 20px auto;    
+    margin: 20px auto;
+    padding: 0 20px;  
     min-width: 450px;
     max-width: 450px;   
     text-align: justify;
-    color: #ffffff;
+    color: var(--color-black);
 }
 #contact-title>h1 {
     padding: 40px 0;
     font-size: 300%;
-    color: #ffffff;
     font-weight: 700;
     text-align: center;
-    text-decoration: underline #00aee7;
 }
 #contact-title>p>a {
     color: #00aee7;
@@ -50,18 +49,6 @@
     outline-style: none;
     outline: none;
 }
-#submitContact {
-    width: 100px;
-    height: 35px;
-    border-radius: 5px;
-    border: none;
-    background-color: #00aee7;
-    transition: 0.3s ease;
-}
-#submitContact:hover {
-    transform: scale(1.04);
-    cursor: pointer;
-}
 .real-input:focus {
     border-color:#00bfff ;
     box-shadow: 0px 0px 5px #00bfff;
@@ -70,6 +57,18 @@
 }
 .real-input::placeholder {
     border: none;   
+}
+.contact-btn {
+    width: 100px;
+    height: 35px;
+    border-radius: 5px;
+    border: none;
+    background-color: #00aee7;
+    transition: 0.3s ease;
+}
+.contact-btn:hover {
+    transform: scale(1.04);
+    cursor: pointer;
 }
 textarea {
     resize: none;
@@ -91,11 +90,9 @@ textarea {
     border: solid 3px #252525;
     border-radius: 10px;
 }
-
 #to {
     align-items: left;
 }
-
 #mailContent {
     margin-top: 3%;
 }
